# UFEMISM2.0

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  README.md  UFEMISM_program  compile_UFEMISM.csh  compile_UPSY.csh  compile_performance.csh  compile_performance_all.csh  laddie_out.txt  piep.txt  test_mesh.txt  testrun.csh
.github/workflows/: UFE_test_suite.yml  UFE_test_suite_analyse_component_tests.yml  UFE_test_suite_analyse_integrated_tests.yml  UFE_test_suite_analyse_unit_tests.yml  UFE_test_suite_append_integrated_tests_scoreboard_files.yml  UFE_test_suite_append_temporary_to_main_scoreboard_files.yml  UFE_test_suite_clean_up_scoreboard.yml  UFE_test_suite_compile_and_cache_UFEMISM.yml  UFE_test_suite_compile_and_cache_UFEMISM_dev.yml  UFE_test_suite_compile_and_cache_UFEMISM_dev_Linux.yml  UFE_test_suite_compile_and_cache_UFEMISM_dev_MacOS.yml  UFE_test_suite_compile_and_cache_UFEMISM_perf.yml  UFE_test_suite_compile_and_cache_UFEMISM_perf_Linux.yml  UFE_test_suite_compile_and_cache_UFEMISM_perf_MacOS.yml  UFE_test_suite_compile_and_cache_dev_Linux.yml  UFE_test_suite_compile_and_cache_dev_MacOS.yml  UFE_test_suite_compile_and_cache_perf_Linux.yml  UFE_test_suite_compile_and_cache_perf_MacOS.yml  UFE_test_suite_finalise_scoreboard.yml  UFE_test_suite_full.yml  UFE_test_suite_install_Python.yml  UFE_test_suite_install_and_cache_Matlab.yml  UFE_test_suite_install_and_cache_Python.yml  UFE_test_suite_run_and_analyse_integrated_tests.yml  UFE_test_suite_run_component_tests.yml  UFE_test_suite_run_integrated_tests.yml  UFE_test_suite_run_unit_tests.yml  UPSY_test_suite.yml  UPSY_test_suite_compile_and_cache_dev_Linux.yml  UPSY_test_suite_compile_and_cache_dev_MacOS.yml  UPSY_test_suite_compile_and_cache_perf_Linux.yml  UPSY_test_suite_compile_and_cache_perf_MacOS.yml  UPSY_test_suite_install_and_cache_Matlab.yml  UPSY_test_suite_install_and_cache_Python.yml  UPSY_test_suite_run_unit_tests.yml  test_git_stuff.yml  test_nix.yml  test_nix.yml_unused.yml  test_ufemism.yml  test_workflow.yml  (+27 more)
automated_testing/: analyse_component_and_integrated_tests.m  analyse_unit_tests_results.m  demo.m  hieperdepiep.m  verify_unit_tests_results.m
automated_testing/analysis_scripts/: create_scoreboard_html.m
automated_testing/code_analysis/: analyse_UFEMISM_code.m
automated_testing/component_tests/: analyse_component_tests.m  analyse_discretisation_tests.m  analyse_mapping_derivative_tests.m  analyse_remapping_tests.asv  analyse_remapping_tests.m  analyse_remapping_tests_grid_to_mesh.m  analyse_remapping_tests_mesh_to_grid.m
automated_testing/integrated_tests/: UFE_test_suite_run_and_analyse_integrated_tests.yml  add_all_integrated_test_results_to_main_scoreboard_files.m  add_all_integrated_tests_to_GitHub_workflow.m  integrated_test_realistic_single_workflow_dummy.txt  integrated_test_single_workflow_dummy.txt  list_all_config_files_of_test.m  list_all_integrated_tests.m  read_single_run_from_temporary_scoreboard_file.m
automated_testing/scoreboard/: create_scoreboard_html.m  dummy.txt  initialise_test_results.m  scoreboard_discretisation_map_deriv_mesh_Ant_fun_8.0000E+04_m_nit_Lloyd_2_linear.txt  scoreboard_discretisation_map_deriv_mesh_Ant_fun_8.0000E+04_m_nit_Lloyd_2_periodic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_fun_8.0000E+04_m_nit_Lloyd_2_quadratic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_x_linear.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_x_periodic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_x_quadratic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_y_linear.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_y_periodic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_gradient_8.0000E+05-4.0000E+05_m_y_quadratic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_uniform_4.0000E+05_m_nit_Lloyd_2_linear.txt  scoreboard_discretisation_map_deriv_mesh_Ant_uniform_4.0000E+05_m_nit_Lloyd_2_periodic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_uniform_4.0000E+05_m_nit_Lloyd_2_quadratic.txt  scoreboard_discretisation_map_deriv_mesh_Ant_uniform_4.0000E+05_m_nit_Lloyd_4_linear.txt  (+158 more)
cmake/: add_compiler_flags.cmake  link_to_dependencies.cmake
config-files/: benchmarks_MISMIP_mod.cfg  benchmarks_MISMIP_mod_advance.cfg  benchmarks_MISMIP_mod_retreat.cfg  benchmarks_MISMIP_mod_spinup.cfg  benchmarks_MISMIPplus_basal_inversion.cfg  benchmarks_MISMIPplus_spinup.cfg  benchmarks_MISMIPplus_spinup_with_spatial_roughness.cfg  benchmarks_MISMIPplus_spinup_with_spatial_roughness_part2.cfg  config_Antarctica_20km_spinup.cfg  config_MISMIP_5km_spinup.cfg  config_MISMIP_8km_spinup_for_scaling.cfg  config_ant_Larsen10km.cfg  config_ant_lgm.cfg  config_ant_matrix.cfg  config_ant_template.cfg  config_ant_test_init_local.cfg  config_ant_test_smb.cfg  config_antarctica_spinup.cfg  config_antarctica_spinup_60km_dot_02km_rlx000.cfg  config_antarctica_spinup_60km_dot_02km_rlx010.cfg  config_antarctica_spinup_60km_dot_02km_rlx050.cfg  config_antarctica_spinup_60km_dot_02km_rlx100.cfg  config_calvmip_circular.cfg  config_calvmip_thule.cfg  config_clean.cfg  config_greenland_spinup.cfg  config_grl_template.cfg  config_main_01.cfg  config_patagonia_smb.cfg  config_stresstest_01.cfg  config_test_01.cfg  config_works.cfg  unit_tests.cfg
src/: Makefile  Makefile_include_book.txt  Makefile_include_ecmwf.txt  Makefile_include_local.txt  Makefile_include_mac.txt  Makefile_include_nix.txt  Makefile_include_snellius.txt  Makefile_ufe  UFEMISM_main_model.f90  UFEMISM_program.f90  main_configuration.f90  main_model_types.f90
src/LADDIE/: laddie_main.f90  (+8 more)
templates/: compile_all.sh  compile_all_gemini.sh  compile_all_mac.csh  compile_all_snellius.sh  compile_clean.sh  compile_clean_gemini.sh  compile_clean_mac.csh  compile_clean_snellius.sh  run_UFEMISM.sh  run_UFEMISM_gemini.sh  run_UFEMISM_mac.csh  run_UFEMISM_snellius.sh  submit_UFEMISM_gemini.sh  submit_UFEMISM_snellius.sh
(+79688 files in other folders)
